--- a/sistema-aluno/aluno.html
+++ b/sistema-aluno/aluno.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sisaluno</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="aluno.css">
 </head>
 <body>
     <titulo>
@@ -27,29 +27,43 @@
 
             <form action="./aluno.html">
 
-            <label for = "name"> Nome do Aluno </label>
-            <input type="text" name="nome" id="nome"> 
+                <div class="name">
 
+            <label for = "name"> Nome do Aluno </label>
+            <input type="text" name="nome" id="nome">
+    
+            
+        </div>
+
+        <div class="end">
             <label for = "endereco"> Endereço </label>
             <input type="text" name="endereco" id="endereco"> 
-
+            </div>
+        <div>
             <label for = "idade"> Idade </label>
-            <input type="number" name="idade" id="idade"> 
+            <input type="number" name="idade" id="idade">
+        </div> 
 
+        <div class="senha">
             <label for = "senha"> Senha </label>
             <input type="password" name="senha" id="senha"> 
+        </div>
+
+        <div class="email">
 
             <label for = "email"> E-email </label>
             <input type="text" name="email" id="email"> 
 
-            <input type ="submit" value ="salvar">
+            <input type ="submit" value ="Salvar">
+
+        </div>
 
             </form>
 
         </section>
     </article>
 
-    <footer> Rodape </footer>
+    <footer>  </footer>
 
 </body>
 </html>
