--- a/sistema-aluno/index.html
+++ b/sistema-aluno/index.html
@@ -22,11 +22,11 @@
     </titulo>
     
     <article class = "principal">
-        <section> Conteudo </section>
-        <aside> Lateral</aside>
+        <section>  </section>
+        <aside> </aside>
     </article>
 
-    <footer> Rodape </footer>
+    <footer>  </footer>
 
 </body>
 </html>
