--- a/sistema-aluno/lista-aluno.html
+++ b/sistema-aluno/lista-aluno.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sisaluno</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="lista-aluno.css">
 </head>
 <body>
     <titulo>
@@ -54,7 +54,7 @@
         </section>
     </article>
 
-    <footer> Rodape </footer>
+    <footer>  </footer>
 
 </body>
 </html>
