--- a/sistema-aluno/index.html
+++ b/sistema-aluno/index.html
@@ -13,8 +13,11 @@
         <nav>
             <a href = "./index.html"> Home </a>
             <a href = "./aluno.html"> Aluno </a>
-            <a href = "./lista-aluno.html"> Lista Aluno </a>
+            <a href = "./lista-aluno.html"> Lista  Aluno </a>
             <a href = "./professor.html"> Professor </a>
+            <a href = "./lista-professor.html"> Lista Professor </a>
+            
+        
 
         </nav>
 
