--- a/sistema-aluno/aluno.html
+++ b/sistema-aluno/aluno.html
@@ -27,7 +27,9 @@
         <section> 
             <h2 style="text-align: center; color: rgb(215, 219, 156);"> Cadastro de Aluno</h2>
 
-            <form action="./aluno.html">
+            <form action="./testealuno.php" method="get">
+                    
+           
 
                 <div class="name">
 
